--- a/mediabrowser.vcxproj.filters
+++ b/mediabrowser.vcxproj.filters
@@ -26,9 +26,6 @@
     <QtRcc Include="mediabrowser.qrc">
       <Filter>Resource Files</Filter>
     </QtRcc>
-    <QtUic Include="mediabrowser.ui">
-      <Filter>Form Files</Filter>
-    </QtUic>
     <QtMoc Include="mediabrowser.h">
       <Filter>Header Files</Filter>
     </QtMoc>
@@ -46,6 +43,9 @@
     <ClCompile Include="FFmpegThumbnailer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Settings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ThumbnailLoader.h">
@@ -54,6 +54,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FFmpegThumbnailer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Settings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
