--- a/mediabrowser.vcxproj
+++ b/mediabrowser.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="FFmpegThumbnailer.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="ThumbnailLoader.cpp" />
+    <ClCompile Include="thumbnailwidget.cpp" />
     <QtRcc Include="mediabrowser.qrc" />
     <QtMoc Include="mediabrowser.h" />
     <ClCompile Include="mediabrowser.cpp" />
@@ -99,6 +100,7 @@
   <ItemGroup>
     <ClInclude Include="FFmpegThumbnailer.h" />
     <ClInclude Include="Settings.h" />
+    <QtMoc Include="thumbnailwidget.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
