--- a/mediabrowser.vcxproj.filters
+++ b/mediabrowser.vcxproj.filters
@@ -49,12 +49,18 @@
     <ClCompile Include="thumbnailwidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="previewarea.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="ThumbnailLoader.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="thumbnailwidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="previewarea.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
