--- a/mediabrowser.vcxproj.filters
+++ b/mediabrowser.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="Settings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
